test/conformance/chainsaw/generating-policies/data/sync/match-namespace-with-ns-selector/policy.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: GeneratingPolicy
metadata:
  name: match-namespace-with-ns-selector
spec:
  evaluation:
    generateExisting:
      enabled: true  
    synchronize:
      enabled: true
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE"]
      resources:   ["namespaces"]
    namespaceSelector:
      matchLabels:
          app.kubernetes.io/managed-by: my-app
  variables:
    - name: targetNs
      expression: "object.metadata.name"
    - name: sourceSecret
      expression: resource.Get("v1", "secrets", "source-namespace", "secret-name")
  generate:
    - expression: generator.Apply(variables.targetNs, [variables.sourceSecret])
