test/conformance/chainsaw/generating-policies/data/sync/match-namespace-with-ns-selector/source.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: source-namespace
---
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: secret-name
  namespace: source-namespace
type: Opaque
