test/conformance/chainsaw/generating-policies/data/sync/match-namespace-with-ns-selector/downstream-assert.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: secret-name
  namespace: target-namespace
type: Opaque
